# datev-viewer

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  SPECS.md  docker-compose.yml  index.html  package-lock.json  package.json
datev_core/: Cargo.toml
datev_core/src/: calculator.rs  lib.rs  models.rs  parser.rs  reader.rs  validator.rs
scripts/: tauri-wrapper.mjs
src/: App.tsx  i18n.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: BookingTable.tsx  ValidationResults.tsx
