[package]
name = "teki-datev-viewer-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
datev_core = { path = "../datev_core" }
tauri-plugin-dialog = "2.7.1"

[features]
custom-protocol = ["tauri/custom-protocol"]
